<resources>
    <string name="app_name">Visual Tiles</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="present">Present</string>
    <string name="enter_event_code">Enter event code</string>
    <string name="join_event">Join an event</string>
    <string name="join_button">Join</string>
    <string name="leave_channel">Leave Channel</string>
    <string name="create_new_event">Create a new event</string>
    <string name="event_name">Event name</string>
    <string name="event_code">Event code (up to 8)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_normalize_database">Normalize database</string>
    <string name="console">Console</string>
    <string name="show_code">Show Code</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="pref_useflash">Flash</string>
    <string name="pref_autofocus">Autofocus</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="tutorial_be_part_of_the_show_header">Be part of the show</string>
    <string name="tutorial_be_part_of_the_show_body">Create a piece of the visual show. Vote for your favorites! Be picked by the VJ!</string>
    <string name="tutorial_vj_platform_header">The Interactive VJ Platform</string>
    <string name="tutorial_vj_platform_body">Give your audience an entertaining and interactive visual experience!</string>
    <string name="tutorial_vj_console_header">Control the Visual Experience</string>
    <string name="tutorial_vj_console_body">Choose which visual tiles are displayed. Trigger effects, change tile and background colors, and more!</string>
    <string name="add_tile">Add Tile</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <string-array name="tile_creation_titles">
        <item>Create a New Visual Tile!</item>
        <item>Draw something!</item>
        <item>Tile Create ACTIVATED!</item>
        <item>Keep It Appropriate, You!</item>
        <item>Let\'s Draw!</item>
    </string-array>

    <string-array name="empty_tile_list_channel">
        <item>No tiles have been created yet</item>
        <item>Let\'s get this party started!</item>
        <item>The room is empty, you can help!</item>
        <item>Watch this space</item>
        <item>Can\'t wait to see some new tiles!</item>
    </string-array>

    <string-array name="empty_tile_list_approved">
        <item>No tiles have been approved yet</item>
        <item>Need to get some tiles approved</item>
        <item>Approve some tiles, let\'s get this party started!</item>
        <item>Can\'t wait to see some tiles approved!</item>
    </string-array>

    <string-array name="empty_tile_list_mine">
        <item>Let\'s make some tiles!</item>
        <item>What are you waiting for?</item>
        <item>Let\'s get this party started, you can help!</item>
        <item>Can\'t wait to see what you come up with!</item>
    </string-array>

    <string-array name="empty_tile_list_now_playing">
        <item>Watch this space</item>
        <item>We\'ll have some tiles running shortly</item>
        <item>The more tiles you make, the more you\'ll see onstage!</item>
        <item>Can\'t wait to get this party started!</item>
    </string-array>

    <string name="title_color_editor">Color Editor</string>
    <string name="title_effect_editor">Effect Editor</string>
    <string name="title_tile_select">Tile Selection</string>
    <string name="title_animation_speed">Animation Speed</string>
    <string name="title_layout_switch">Layout Switcher</string>
    <string name="begin_staging">Begin Bulk Edit</string>
    <string name="end_staging">Commit Edit</string>
    <string name="error_event_name_empty">Please provide an event name</string>
    <string name="error_event_code_empty">Please provide an event code</string>
    <string name="error_event_code_in_use">" is already in use, sorry!"</string>
    <string name="create_event">Create event</string>
    <string name="select_speed">Drag to select speed.</string>
    <string name="scan_to_join">Scan QR to join</string>
    <string name="join_channel_message">Would you like to join the channel code \'%s\'?</string>
    <string name="try_visual_tiles">Join my Visual Tiles event, "%s"!</string>
    <string name="deep_link_url">http://www.visualtilestogether.com/channel/</string>
    <string name="qr_code_authority">zas63.app.goo.gl</string>
    <string name="qr_code_url">https://zas63.app.goo.gl/</string>
    <string name="link_param">link</string>
    <string name="apn_param">apn</string>
    <string name="channel_qr_code">Channel QR Code:</string>
    <string name="delete_channel">Delete Channel</string>
</resources>
