<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_present"
        android:title="@string/present"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_leave_channel"
        android:title="@string/leave_channel"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never"/>

    <group android:id="@+id/menu_moderator_controls"
        android:visible="false">
        <item
            android:id="@+id/menu_item_moderator_console"
            android:title="@string/console"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/menu_item_normalize_db"
            android:title="@string/menu_normalize_database"
            app:showAsAction="never"/>
    </group>
</menu>