<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="center"
        android:src="@drawable/party_silhouette"
        android:layout_alignParentBottom="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:id="@+id/etEventCode"
        android:hint="@string/enter_event_code"/>

    <TextView
        android:text="@string/join_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="47dp"
        android:id="@+id/tvJoinEventLabel"/>

    <Button
        android:text="@string/join_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEventCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:id="@+id/btnJoinEvent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="joinEventOnClick"/>

    <View
        style="@style/divider"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/btnJoinEvent"/>

    <Button
        android:text="@string/create_new_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnCreateEvent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="createNewEventOnClick"/>

</RelativeLayout>

</layout>